# Spotify-Database

./: .replit  README.md  database.db  pyproject.toml
setup/: albums.sql  artists.sql  extraData.sql  genres.sql  main.py  setup.py  tracks.sql
worksheets/: 1. Basic Select Worksheet.md  2. Deleting, Inserting, and Updating Data Worksheet.md  3. Advanced Selects Worksheet.md  4. Grouping Data Worksheet.md  5. Joining Tables Worksheet.md
